# RustyPandas

./: .gitattributes  .travis.yml  Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
src/: lib.rs
src/array/: mod.rs
src/calculus/: differentiation.rs  mod.rs
src/constants/: mod.rs
src/dataframe/: mod.rs
src/fitting/: levenberg_marquardt.rs  mod.rs
src/functions/: basic.rs
src/indexer/: mod.rs
src/linalg/: matrix.rs  mod.rs  vector.rs
src/linearalgebra/: mod.rs
src/series/: mod.rs
src/types/: dual.rs  mod.rs  unit.rs
