[package]
name = "mathpack"
version = "0.1.8"
authors = ["Jordan Osborn <jordanosborn0@gmail.com>"]
edition = "2018"
license = "MIT"
description = "General Mathematics Library for Rust"
documentation = "https://docs.rs/crate/mathpack"
homepage = "https://github.com/jordanosborn/mathpack"
repository = "https://github.com/jordanosborn/mathpack"
readme = "README.md"

[profile.dev]
opt-level = 3

[dependencies]
nalgebra = "0.18.0"
rayon = "1.1.0"
serde = "1.0.92"
gnuplot = "0.0.31"
itertools = "0.8.0"
num = "0.2.0"
rand = "0.6.5"
text_io = "0.1.7"
sqlite = "0.25.0"
#actix? for web frontend?

[dev-dependencies]
