[package]
name = "mathpack"
version = "0.1.8"
authors = ["Jordan Osborn <jordanosborn0@gmail.com>"]
edition = "2018"
license = "MIT"
description = "General Mathematics Library for Rust"
documentation = "https://docs.rs/crate/mathpack"
homepage = "https://github.com/jordanosborn/mathpack"
repository = "https://github.com/jordanosborn/mathpack"
readme = "README.md"

[profile.dev]
opt-level = 3

[dependencies]
nalgebra = "0.18.1"
rayon = "1.1.0"
serde = "1.0.99"
gnuplot = "0.0.31"
itertools = "0.8.0"
num = "0.2.0"
rand = "0.7.0"
text_io = "0.1.7"
sqlite = "0.25.0"
approx = "0.3.2"
maplit = "1.0.2"
indicatif = "0.11.0"
csv = "1.1.1"
cute = "0.3.0"
diesel = "1.4.2"
# 0.5.0 is broken on crates.io
#faster = {git="https://github.com/AdamNiederer/faster.git"}
#actix? for web frontend? diesel num complex

[build-dependencies]
cc = { version = "1.0.41", features = ["parallel"] }
