[package]
name = "rusty_pandas"
version = "0.0.2"
authors = ["Jordan Osborn <jordanosborn0@gmail.com>"]
edition = "2018"
license = "MIT"
description = "General Mathematics Library for Rust"
documentation = "https://docs.rs/crate/rustypandas"
homepage = "https://github.com/jordanosborn/rustypandas"
repository = "https://github.com/jordanosborn/rustypandas"
readme = "README.md"

[profile.dev]
opt-level = 0

[dependencies]
rust_decimal = "1.0.3"
nalgebra = "0.18.1"
regex = "1.2.1"
rayon = "1.2.0"
serde = "1.0.99"
gnuplot = "0.0.31"
itertools = "0.8.0"
#GSL = "1.1.0"
num = "0.2.0"
rand = "0.7.0"
text_io = "0.1.7"
sqlite = "0.25.0"
approx = "0.3.2"
maplit = "1.0.2"
indicatif = "0.11.0"
csv = "1.1.1"
cute = "0.3.0"
diesel = "1.4.2"
reqwest = "0.9.20"
clap = "2.33.0"
rug = "1.5.2"
ndarray = { version = "0.12.1", features = ["blas", "serde-1"]}#"rayon"] }
blas-src = { version = "0.3.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.1", default-features = false, features = ["cblas", "system"] }
chrono = { version = "0.4.7", features = ["serde"] }
# 0.5.0 is broken on crates.io
#faster = {git="https://github.com/AdamNiederer/faster.git"}
#actix? for web frontend? diesel num complex

[build-dependencies]
cc = { version = "1.0.41", features = ["parallel"] }
